# doxyrs

./: Cargo.toml
src/: main.rs  parser.rs
static/: script.js  style.css
templates/: file.html  nav.html  page.html
