[package]
name = "doxyrs"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.11.0"
tera = { version = "1.3.0", default-features = false }
serde = { version = "1.0.111", features = ["derive"] }
rayon = { version = "1.3.0", default-features = false }
regex = { version = "1.3.9", default-features = false }
# html-minifier = "1.2.1"
gumdrop = "0.8.0"
json = "0.12.4"
