[package]
name = "doxyrs"
version = "0.1.0"
authors = ["Fabian Beckmann <fb@phaseq.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
roxmltree = "0.20.0"
tera = { version = "1.20.0", default-features = false }
serde = { version = "1.0.207", features = ["derive"] }
rayon = { version = "1.10.0", default-features = false }
regex = { version = "1.10.6", default-features = false }
html-minifier = "5.0.0"
json = "0.12.4"
percent-encoding = "2.3.1"
clap = { version = "4.5.15", features = ["std", "derive"] }
